# neug

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  NOTICE.txt  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  dev_and_test.md  neug-config-version.in.cmake  neug-config.in.cmake
src/compiler/: CMakeLists.txt
src/compiler/antlr4/: Cypher.g4  keywords.txt
src/compiler/binder/: CMakeLists.txt  binder.cpp  binder_scope.cpp  bound_scan_source.cpp  bound_statement_result.cpp  bound_statement_rewriter.cpp  bound_statement_visitor.cpp  expression_binder.cpp  expression_evaluator.cpp  expression_evaluator_utils.cpp  expression_mapper.cpp  function_evaluator.cpp  literal_evaluator.cpp
src/compiler/binder/bind/: CMakeLists.txt  bind_attach_database.cpp  bind_create_macro.cpp  bind_ddl.cpp  bind_detach_database.cpp  (+15 more)
src/compiler/catalog/: CMakeLists.txt  catalog.cpp  catalog_set.cpp  property_definition_collection.cpp
src/compiler/common/: CMakeLists.txt  case_insensitive_map.cpp  constants.cpp  expression_type.cpp  in_mem_overflow_buffer.cpp  mask.cpp  md5.cpp  metric.cpp  null_mask.cpp  profiler.cpp  random_engine.cpp  string_utils.cpp  system_message.cpp  type_utils.cpp  utils.cpp  windows_utils.cpp
src/compiler/extension/: CMakeLists.txt  extension.cpp  extension_api.cpp  extension_entries.cpp  extension_manager.cpp  generated_extension_loader.cpp.in  generated_extension_loader.h.in
src/compiler/function/: CMakeLists.txt  aggregate_function.cpp  base_lower_upper_operation.cpp  built_in_function_utils.cpp  cast_from_string_functions.cpp  cast_string_non_nested_functions.cpp  comparison_functions.cpp  export_csv_function.cpp  function.cpp  function_collection.cpp  scalar_macro_function.cpp  show_loaded_extensions_function.cpp  vector_arithmetic_functions.cpp  vector_cast_functions.cpp  vector_date_functions.cpp  vector_string_functions.cpp
src/compiler/gopt/: CMakeLists.txt  g_alias_manager.cpp  g_catalog.cpp  g_catalog_holder.cpp  g_ddl_converter.cpp  g_expr_converter.cpp  g_precedence.cpp  g_query_converter.cpp  g_type_converter.cpp  g_type_registration.cpp  g_vfs_holder.cpp
src/compiler/graph/: CMakeLists.txt  graph.cpp  graph_entry.cpp  on_disk_graph.cpp
src/compiler/main/: CMakeLists.txt  client_context.cpp  metadata_manager.cpp  plan_printer.cpp  prepared_statement.cpp  query_summary.cpp  settings.cpp  storage_manager.cpp
src/compiler/optimizer/: CMakeLists.txt  acc_hash_join_optimizer.cpp  agg_key_dependency_optimizer.cpp  cardinality_updater.cpp  common_pattern_reuse_optimizer.cpp  correlated_subquery_unnest_solver.cpp  expand_getv_fusion.cpp  factorization_rewriter.cpp  filter_push_down_optimizer.cpp  filter_push_down_pattern.cpp  flat_join_to_expand_optimizer.cpp  limit_push_down_optimizer.cpp  logical_operator_collector.cpp  logical_operator_visitor.cpp  optimizer.cpp  project_join_condition_optimizer.cpp  projection_push_down_optimizer.cpp  remove_factorization_rewriter.cpp  remove_subquery_as_join.cpp  remove_unnecessary_join_optimizer.cpp  schema_populator.cpp  top_k_optimizer.cpp  union_alias_map_optimizer.cpp
src/compiler/parser/: CMakeLists.txt  create_macro.cpp  parsed_statement_visitor.cpp  parser.cpp  transformer.cpp
src/compiler/planner/: CMakeLists.txt  gopt_planner.cc  join_order_enumerator_context.cpp  planner.cpp  query_planner.cpp  subplans_table.cpp
src/compiler/transaction/: CMakeLists.txt  transaction.cpp
src/storages/graph/: CMakeLists.txt  edge_table.cc  graph_interface.cc  property_graph.cc  schema.cc  vertex_table.cc  vertex_timestamp.cc
src/storages/loader/: CMakeLists.txt  abstract_property_graph_loader.cc  loader_utils.cc  loading_config.cc  odps_fragment_loader.cc
(+2160 files in other folders)
